syntax = "proto3";

package cresplanex.bloader.v1;

option go_package = "github.com/cresplanex/bloader/gen/pb/cresplanex/bloader/v1";

message Encryption {
  bool enabled = 1;
  string encrypt_id = 2;
}
